# backlog-automation

./: .env.example  .gitignore  CLAUDE.md  README.md  assistant_draft.md  final_version.md  pyproject.toml
src/backlog_automation/: config.py  main.py
src/backlog_automation/generators/: story_generator.py
src/backlog_automation/publishers/: confluence_publisher.py  figma_publisher.py  jira_publisher.py
src/backlog_automation/readers/: excel_reader.py  word_reader.py
